crates/anymount/src/tui/widgets/mounts_list/snapshots/connected_mount_row_selected.snap
---
source: crates/anymount/src/tui/widgets/mounts_list/mount_row.rs
expression: terminal.backend()
---
" ┌─────────────────────────────────────────────────────────────────────────────┐"
" │ ●  test                 /test                            test    [ ⇐ ][ ↵ ] │"
" └─────────────────────────────────────────────────────────────────────────────┘"
