crates/anymount/src/tui/widgets/mounts_list/snapshots/mounts_list.snap
---
source: crates/anymount/src/tui/widgets/mounts_list/mounts_list.rs
expression: terminal.backend()
---
" ┌─────────────────────────────────────────────────────────────────────────────┐"
" │ ●  Connected Mount      /mnt/connected                   local              │"
"┌┴────────────────────────────────────────────────────────────────────────────┬┤"
"│ ○  Disconnected Mount   /mnt/disconnected                local              ││"
"└┬────────────────────────────────────────────────────────────────────────────┴┤"
" │                                                                             │"
" └─────────────────────────────────────────────────────────────────────────────┘"
"       j↑ select ↓k             ⇐ disconnect connect ⇒             info ↵       "
"                                                                                "
"                                                                                "
